Clean up the UI so it scrolls properly when answers are visible (Fixes #5)

--- a/assets/stylesheets/poll-ui.scss
+++ b/assets/stylesheets/poll-ui.scss
@@ -29,22 +29,24 @@
     padding: 0 .5em;
     clear: both;
 
-    .d-editor {
-      border-width: 0;
+    .choices {
+      .d-editor {
+        border-width: 0;
 
-      .d-editor-container {
-        padding: 0;
+        .d-editor-container {
+          padding: 0;
 
-        .d-editor-button-bar {
-          display: none;
-        }
+          .d-editor-button-bar {
+            display: none;
+          }
 
-        .d-editor-preview {
-          display: none;
-        }
+          .d-editor-preview {
+            display: none;
+          }
 
-        textarea {
-          height: 150px;
+          textarea {
+            height: 150px;
+          }
         }
       }
     }
